kubernetes/apps/webapp/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "$(SUBDOMAIN_PLACEHOLDER).${domain}"
      secretName: "$(SUBDOMAIN_PLACEHOLDER)-tls"
  rules:
    - host: "$(SUBDOMAIN_PLACEHOLDER).${domain}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: svc
                port:
                  name: http
